[DevTools] Fix grid highlight scaling

Bug: 760634
Change-Id: Ia6a3a5cf7033d167ce8f7f1c54b956bc312c56ee
Reviewed-on: https://chromium-review.googlesource.com/644496
Commit-Queue: Eugene Ostroukhov <eostroukhov@chromium.org>
Reviewed-by: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498876}
Former-commit-id: f36dbf3ffdc25abf5838a158c9bd24d0622dcfc6